# video2text

./: .gitignore  README.md  pyproject.toml
sandbox/: deepspeech_recognition.py  speech_recognition copy.py
tests/: test_extractor.py
video2text/: __init__.py  extractor.py
